syntax = "proto3";

package Aevatar.Agents.AI;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

// Aevatar AI Agent状态
message AevatarAIAgentState {
    // 基础状态字段
    string agent_id = 1;
    int64 version = 2;
    
    // 对话历史
    ConversationHistory conversation = 3;
    
    // 工作记忆
    WorkingMemory working_memory = 4;
    
    // 工具执行历史
    ToolExecutionHistory tool_history = 5;
    
    // AI配置
    AevatarAIConfiguration ai_config = 6;
    
    // 当前目标
    repeated string active_goals = 7;
    
    // 最后活动时间
    google.protobuf.Timestamp last_activity = 8;
}

// 对话历史
message ConversationHistory {
    string session_id = 1;
    repeated ConversationMessage messages = 2;
    int32 max_messages = 3;
    ConversationSummary summary = 4;
}

// 对话消息
message ConversationMessage {
    string id = 1;
    string role = 2; // system/user/assistant/function
    string content = 3;
    google.protobuf.Timestamp timestamp = 4;
    map<string, string> metadata = 5;
    string function_name = 6; // 当role为function时
}

// 对话总结
message ConversationSummary {
    string content = 1;
    repeated string key_points = 2;
    repeated string topics = 3;
    string sentiment = 4;
}

// 工作记忆
message WorkingMemory {
    map<string, google.protobuf.Any> context = 1;
    repeated string active_tools = 2;
    map<string, string> variables = 3;
}

// 工具执行历史
message ToolExecutionHistory {
    repeated ToolExecution executions = 1;
    int32 max_history = 2;
}

// 工具执行记录
message ToolExecution {
    string execution_id = 1;
    string tool_name = 2;
    map<string, string> parameters = 3;
    string result = 4;
    bool success = 5;
    string error = 6;
    google.protobuf.Timestamp timestamp = 7;
    int64 duration_ms = 8;
}

// Aevatar AI配置
message AevatarAIConfiguration {
    string provider = 1;
    string model = 2;
    double temperature = 3;
    int32 max_tokens = 4;
    string system_prompt = 5;
    repeated string enabled_tools = 6;
    map<string, string> provider_settings = 7;
}

// Aevatar AI处理请求事件
message AevatarAIProcessingRequest {
    string request_id = 1;
    google.protobuf.Any input_event = 2;
    string prompt_template = 3;
    map<string, string> parameters = 4;
    AevatarAIProcessingMode mode = 5;
}

// Aevatar AI处理模式
enum AevatarAIProcessingMode {
    AEVATAR_AI_PROCESSING_MODE_UNSPECIFIED = 0;
    AEVATAR_AI_PROCESSING_MODE_STANDARD = 1;
    AEVATAR_AI_PROCESSING_MODE_CHAIN_OF_THOUGHT = 2;
    AEVATAR_AI_PROCESSING_MODE_RE_ACT = 3;
    AEVATAR_AI_PROCESSING_MODE_TREE_OF_THOUGHTS = 4;
}

// Aevatar AI处理响应事件
message AevatarAIProcessingResponse {
    string request_id = 1;
    google.protobuf.Any output_event = 2;
    string generated_text = 3;
    repeated ToolInvocation tool_invocations = 4;
    TokenUsage token_usage = 5;
    int64 processing_time_ms = 6;
}

// 工具调用
message ToolInvocation {
    string tool_name = 1;
    map<string, string> arguments = 2;
    string result = 3;
}

// Token使用情况
message TokenUsage {
    int32 prompt_tokens = 1;
    int32 completion_tokens = 2;
    int32 total_tokens = 3;
}

// Aevatar 思考步骤事件（用于链式思考）
message AevatarThoughtStepEvent {
    int32 step_number = 1;
    string thought = 2;
    string reasoning = 3;
    string conclusion = 4;
    double confidence = 5;
}

// 记忆存储事件
message MemoryStoredEvent {
    string memory_id = 1;
    string content = 2;
    repeated string tags = 3;
    double importance = 4;
    google.protobuf.Timestamp timestamp = 5;
}

// 记忆回忆事件
message MemoryRecalledEvent {
    string query = 1;
    repeated RecalledItem items = 2;
}

// 回忆项
message RecalledItem {
    string memory_id = 1;
    string content = 2;
    double relevance_score = 3;
}

// 工具注册事件
message ToolRegisteredEvent {
    string tool_name = 1;
    string description = 2;
    repeated string tags = 3;
}

// Aevatar 工具执行事件
message AevatarToolExecutedEvent {
    string tool_name = 1;
    map<string, string> parameters = 2;
    string result = 3;
    bool success = 4;
    int64 duration_ms = 5;
}

// 提示词更新事件
message PromptUpdatedEvent {
    string template_id = 1;
    string old_content = 2;
    string new_content = 3;
    string reason = 4;
}

// Aevatar AI错误事件
message AevatarAIErrorEvent {
    string error_type = 1;
    string message = 2;
    string stack_trace = 3;
    string context = 4;
    google.protobuf.Timestamp timestamp = 5;
}

// Aevatar AI性能指标事件
message AevatarAIMetricsEvent {
    int64 total_requests = 1;
    int64 successful_requests = 2;
    int64 failed_requests = 3;
    int64 total_tokens_consumed = 4;
    double average_response_time_ms = 5;
    map<string, int64> tool_execution_counts = 6;
    google.protobuf.Timestamp timestamp = 7;
}

// Aevatar 思维树完成事件
message AevatarTreeOfThoughtsCompletedEvent {
    int32 nodes_explored = 1;
    double final_score = 2;
    string solution_path = 3;
    string final_answer = 4;
    int32 depth_reached = 5;
    int64 processing_time_ms = 6;
    google.protobuf.Timestamp timestamp = 7;
}
