syntax = "proto3";

package aevatar.agents.ai.core.tests;

option csharp_namespace = "Aevatar.Agents.AI.Core.Tests.Messages";

import "google/protobuf/timestamp.proto";

// Test state for AI agents
message TestAIAgentState {
    string id = 1;
    int32 counter = 2;
    string last_message = 3;
    repeated string history = 4;
    google.protobuf.Timestamp last_updated = 5;
}

// Test event for AI agents
message TestAIEvent {
    string event_id = 1;
    string content = 2;
    string sender = 3;
    google.protobuf.Timestamp timestamp = 4;
}

// Test tool execution event
message TestToolExecutionEvent {
    string tool_name = 1;
    string parameters = 2;
    string result = 3;
    bool success = 4;
}

